fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,7 @@
     display: none;
   }
 }
+
+body {
+  overflow-x: hidden;
+}
